--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,11 @@
+# Visual Studio Code
+.vscode
 .metals
 
 # sbt specific
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-project/local-plugins.sbt
-.history
 .bsp
-
-# Scala-IDE specific
-.scala_dependencies
 .scala-build/
 .scalafmt.conf
-.cache
-.classpath
-.project
-.settings
-classes/
 
-# Visual Studio Code
-.vscode
-
-temp.txt
+# Files I don't want public
+textFiles
